--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-HOST=127.0.0.1
+HOST=0.0.0.0
 PORT=3333
 NODE_ENV=development
 APP_NAME=ParkingApps
@@ -10,7 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=x
-DB_DATABASE=sirus
+DB_DATABASE=parking
 HASH_DRIVER=bcrypt
 TZ='Asia/Jakarta'
 REDIS_CONNECTION=local
@@ -18,4 +18,4 @@ DB_HOST_LOG=127.0.0.1
 DB_PORT_LOG=5432
 DB_USER_LOG=postgres
 DB_PASSWORD_LOG=x
-DB_DATABASE_LOG=siruslog
+DB_DATABASE_LOG=parkinglog
