--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,10 @@ services:
       DB_PORT_LOG: 5432
       DB_USER_LOG: postgres
       DB_PASSWORD_LOG: postgres
-      DB_DATABASE_LOG: parkinglog
+      DB_DATABASE_LOG: parking
+      REDIS_CONNECTION: local
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
     ports:
       - "3333:3333"
     depends_on:
