--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: parking
+      TIME_ZONE: "Asia/Jakarta"
+      TZ: "Asia/Jakarta"
   backend:
     build:
       context: ./backend
@@ -38,6 +40,8 @@ services:
       REDIS_CONNECTION: local
       REDIS_HOST: redis
       REDIS_PORT: 6379
+      TIME_ZONE: "Asia/Jakarta"
+      TZ: "Asia/Jakarta"
     ports:
       - "3333:3333"
     depends_on:
